--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "next": "12.2.2",
+    "pdfmake": "^0.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactstrap": "^9.1.2"
   },
   "devDependencies": {
+    "@types/pdfmake": "^0.2.0",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "typescript": "^4.7.4"
